@startuml
title Loan Telegram Bot - Class Diagram

skinparam packageStyle rectangle
skinparam classAttributeIconSize 0

package "bot" {
    class LoanTelegramBot {
        - String botUsername
        - BotMessageHandler messageHandler
        + getBotUsername() String
        + onUpdateReceived(Update update) void
    }

    class BotMessageHandler {
        - LoanService loanService
        - UserSessionStorage sessionStorage
        - PaymentScheduleFormatter scheduleFormatter
        - HistoryFormatter historyFormatter
        - AnalyticsService analyticsService
        - AnalyticsFormatter analyticsFormatter
        - ManagerAuthService managerAuthService
        - ManagerSessionStorage managerSessionStorage
        + handle(long userId, String text) BotResponse
        + handleCallback(long userId, String callbackData) BotResponse
    }

    class BotResponse {
        - String text
        - List<List<BotButton>> keyboard
        + text(String text) BotResponse
        + withKeyboard(String text, List<List<BotButton>> keyboard) BotResponse
        + hasKeyboard() boolean
    }

    class BotButton <<record>> {
        + String label
        + String callbackData
    }

    class UserSessionStorage {
        - Map<Long, UserSession> sessions
        + getSession(long userId) UserSession
        + clearSession(long userId) void
    }

    class ManagerSessionStorage {
        - Set<Long> authorizedManagers
        + authorize(long userId) void
        + revoke(long userId) void
        + isAuthorized(long userId) boolean
    }

    class UserSession {
        - UserState state
        - BigDecimal amount
        - Integer months
        - BigDecimal annualRate
        - PaymentType paymentType
        + clear() void
    }

    enum UserState {
        NONE
        WAITING_AMOUNT
        WAITING_MONTHS
        WAITING_RATE
        WAITING_PAYMENT_TYPE
    }
}

package "model" {
    class LoanRequest {
        - long userId
        - BigDecimal amount
        - int months
        - BigDecimal annualRate
        - PaymentType paymentType
    }

    class PaymentScheduleItem {
        - int month
        - BigDecimal totalPayment
        - BigDecimal principalPayment
        - BigDecimal interestPayment
        - BigDecimal remainingDebt
    }

    enum PaymentType {
        ANNUITY
        DIFFERENTIATED
    }
}

package "calculator" {
    interface PaymentCalculator {
        + calculate(LoanRequest request) List<PaymentScheduleItem>
    }

    class AnnuityPaymentCalculator {
        + calculate(LoanRequest request) List<PaymentScheduleItem>
    }

    class DifferentiatedPaymentCalculator {
        + calculate(LoanRequest request) List<PaymentScheduleItem>
    }

    class PaymentCalculatorFactory {
        + create(PaymentType paymentType) PaymentCalculator
    }
}

package "repository" {
    interface LoanRequestRepository {
        + save(LoanRequest request) void
        + findByUserId(long userId) List<LoanRequest>
        + findAll() List<LoanRequest>
    }

    class InMemoryLoanRequestRepository {
        - Map<Long, List<LoanRequest>> requestsByUserId
        + save(LoanRequest request) void
        + findByUserId(long userId) List<LoanRequest>
        + findAll() List<LoanRequest>
    }
}

package "service" {
    class LoanService {
        - PaymentCalculatorFactory calculatorFactory
        - LoanRequestRepository loanRequestRepository
        + calculateSchedule(LoanRequest request) List<PaymentScheduleItem>
        + getUserHistory(long userId) List<LoanRequest>
        + getAllRequests() List<LoanRequest>
    }

    class AnalyticsService {
        - LoanRequestRepository loanRequestRepository
        + countAllRequests() long
        + countByPaymentType() Map<PaymentType, Long>
        + filter(BigDecimal minAmount, BigDecimal maxAmount, PaymentType paymentType) List<LoanRequest>
        + filterByAmount(BigDecimal minAmount, BigDecimal maxAmount) List<LoanRequest>
        + filterByPaymentType(PaymentType paymentType) List<LoanRequest>
        + countByLoanTerm() Map<Integer, Long>
    }

    class ManagerAuthService {
        - String managerLogin
        - String managerPassword
        + authenticate(String login, String password) boolean
    }
}

package "formatter" {
    class PaymentScheduleFormatter {
        + format(List<PaymentScheduleItem> schedule) String
    }

    class HistoryFormatter {
        + format(List<LoanRequest> history) String
    }

    class AnalyticsFormatter {
        + format(long totalRequests, Map<PaymentType,Long> byType, Map<Integer,Long> byTerm) String
    }
}

LoanTelegramBot --> BotMessageHandler
LoanTelegramBot --> BotResponse

BotMessageHandler --> LoanService
BotMessageHandler --> UserSessionStorage
BotMessageHandler --> PaymentScheduleFormatter
BotMessageHandler --> HistoryFormatter
BotMessageHandler --> AnalyticsService
BotMessageHandler --> AnalyticsFormatter
BotMessageHandler --> ManagerAuthService
BotMessageHandler --> ManagerSessionStorage
BotMessageHandler --> BotResponse

BotResponse --> BotButton

UserSessionStorage --> UserSession
UserSession --> UserState
UserSession --> PaymentType

LoanService --> PaymentCalculatorFactory
LoanService --> LoanRequestRepository

AnalyticsService --> LoanRequestRepository

PaymentCalculatorFactory --> PaymentCalculator
PaymentCalculator <|.. AnnuityPaymentCalculator
PaymentCalculator <|.. DifferentiatedPaymentCalculator

LoanRequestRepository <|.. InMemoryLoanRequestRepository

LoanRequest --> PaymentType
PaymentCalculator --> LoanRequest
PaymentCalculator --> PaymentScheduleItem

PaymentScheduleFormatter --> PaymentScheduleItem
HistoryFormatter --> LoanRequest
AnalyticsFormatter --> PaymentType

@enduml
